# stateset-python

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SDK_ENHANCEMENT_SUMMARY.md  __init__.py  base_resource.py  client.py  dev_tools.py  errors.py  pyproject.toml  stateset_types.py  types.py
.github/workflows/: test.yml
api/accounts/: get_account_by_name.py
api/bill_of_materials/: create_billof_materials.py  delete_bill_of_materials.py  get_bill_of_materials_by_id.py  get_billof_materials.py  update_bill_of_materials.py
api/bill_of_materials_line_items/: get_bill_of_materials_item_by_id.py  get_bill_of_materials_line_item_by_id.py  update_bill_of_materials_line_item.py
api/customers/: create_customer.py  delete_customers.py  get_customer_by_id.py  get_customers.py  update_customers.py
api/inventory_items/: create_inventory_items.py  get_inventory_item_by_id.py  get_inventory_items.py  update_inventory_item.py
api/manufacture_order_line_items/: get_manufacture_item_by_id.py  get_manufacture_line_item_by_id.py  update_manufacture_line_item.py
api/manufacture_orders/: get_manufacture_order_by_id.py  get_manufacture_orders.py  update_manufacture_order.py
api/messages/: create_message.py  delete_message.py  get_message_by_id.py  get_messages.py  update_message.py
api/notes/: create_note.py  delete_inventory_item.py  delete_notes.py  get_customers_by_id.py  get_notes.py  get_notes_by_id.py  update_notes.py
api/orders/: create_order.py  delete_order.py  get_order_by_id.py  get_orders.py  update_order.py
api/return_line_items/: get_return_item_by_id.py  get_return_line_item_by_id.py  update_return_line_item.py
api/returns/: create_return.py  delete_return.py  get_return_by_id.py  get_returns.py  update_return.py
api/warranties/: create_warranty.py  get_warranties.py
api/warranty/: delete_warranty.py  get_warranty_by_id.py  update_warranty.py
api/warranty_line_items/: get_warranty_item_by_id.py  get_warranty_line_item_by_id.py  update_warranty_line_item.py
api/work_order_line_items/: get_work_item_by_id.py  get_work_line_item_by_id.py  update_work_line_item.py
api/work_orders/: get_work_order_by_id.py  get_work_ordes.py  update_work_order.py
models/: __init__.py  agent.py  agent_response.py  attribute.py  bill_of_materials.py  bill_of_materials_line_item.py  case_ticket.py  customers.py  eval.py  generic.py  inventory_items.py  knowledge.py  manufacture_order.py  manufacture_order_line_item.py  messages.py  notes.py  order.py  problem.py  return_.py  return_item.py  rule.py  shipping_label.py  warranty.py  warranty_item.py  work_order.py  work_order_line_items.py
resources/: agent_resource.py  asset_resource.py  attribute_resource.py  bill_of_material_resource.py  case_ticket_resource.py  cash_sale_resource.py  channel_resource.py  compliance_resource.py  contract_resource.py  customer_resource.py  cycle_count_resource.py  eval_resource.py  fulfillment_order_resource.py  inventory_resource.py  invoice_line_resource.py  invoice_resource.py  item_receipt_resource.py  knowledge_resource.py  lead_resource.py  location_resource.py  log_resource.py  machine_resource.py  manufacture_order_line_resource.py  manufacture_order_resource.py  message_resource.py  note_resource.py  order_line_resource.py  order_resource.py  payment_resource.py  payout_resource.py  pick_resource.py  product_resource.py  promotion_resource.py  purchase_order_line_resource.py  purchase_order_resource.py  response_resource.py  return_line_resource.py  return_resource.py  rule_resource.py  schedule_resource.py  (+13 more)
stateset/: __init__.py  _version.py  base_resource.py  client.py  errors.py  stateset_types.py  types.py
stateset/models/: __init__.py  customers.py  order.py  return_.py  shipping_label.py  warranty.py
stateset/resources/: __init__.py  base.py  customer_resource.py  generic.py  inventory.py  order_resource.py  orders.py  return_resource.py  returns.py  warranties.py  warranty_resource.py  workflows.py
tests/: __init__.py  conftest.py  test_client.py  test_errors.py  test_resources.py  test_types.py
